Improved Upload Page

--- a/CustomerService/Web.config
+++ b/CustomerService/Web.config
@@ -24,9 +24,22 @@
 	</appSettings>
 	<connectionStrings>
 		<clear/>
-		<!--<add name="constr" connectionString="Data Source=UGUKKAMAPP0001;Initial Catalog=custservice; UserID=cerve;Password=Licia122008Be;Integrated Security=False;AllowBatch=True;" providerName="Mysql.Data.MySqlClient"/>-->
+		<!--
+		
+		
+		-->
+		<add name="constr" connectionString="Data Source=UGUKKAMAPP0001;Initial Catalog=custservice; UserID=cerve;Password=Licia122008Be;Integrated Security=False;AllowBatch=True;" providerName="Mysql.Data.MySqlClient"/>
+		<add name="connstring" connectionString="Data Source=UGUKKAMAPP0001;Initial Catalog=customers; UserID=cerve;Password=Licia122008Be;Integrated Security=False;AllowBatch=True;" providerName="Mysql.Data.MySqlClient"/>
+		<!--
+		<add name="constr" connectionString="Data Source=ugpbhkmapp0002;Initial Catalog=custservice; UserID=BillerUser;Password=B!ll3r@2022!;Integrated Security=False;AllowBatch=True;" providerName="Mysql.Data.MySqlClient"/>-->
+		
+		<!--
+		<add name="constr" connectionString="Data Source=UGUKKAMAPP0001;Initial Catalog=custservice; UserID=cerve;Password=Licia122008Be;Integrated Security=False;AllowBatch=True;" providerName="Mysql.Data.MySqlClient"/>
+		-->
+		<!--
 		<add name="connstring" connectionString="Data Source=127.0.0.1;Initial Catalog=customers; UserID=root;Password=Malaika27th;Integrated Security=False;AllowBatch=True;" providerName="Mysql.Data.MySqlClient"/>
 		<add name="constr" connectionString="Data Source=127.0.0.1;Initial Catalog=custservice; UserID=root;Password=Malaika27th;Integrated Security=False;AllowBatch=True;" providerName="Mysql.Data.MySqlClient"/>
+		-->
 		<remove name="LocalMySqlServer"/>
 		<add connectionString="" name="LocalMySqlServer" providerName="MySql.Data.MySqlClient"/>
 	</connectionStrings>
